--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.2.0",
@@ -37,7 +38,5 @@
     "eslint-plugin-standard": "^3.0.1",
     "webpack": "^2.4.1"
   },
-  "dependencies": {
-    "babel-preset-env": "^1.4.0"
-  }
+  "dependencies": {}
 }
